TAG: gxdhtload-6-0-25-6
DATE: 05/02/2025
STAFF: lec
CHANGES: 
wts2-1657/e4g-248/sw:GEO_GXD_HT_Load -- one-time back population of "Other" series
        modified:   bin/mirror_geo_sample.py
added logic to use a test set from Connie

TAG: gxdhtload-6-0-25-5
DATE: 04/28/2025
STAFF: lec
CHANGES: 
wts2-1652/e4g-235/GXD HT Load/AE issue
        modified:   bin/ae_htload.py

TAG: gxdhtload-6-0-25-4
TAG: gxdhtload-6-0-25-3
DATE: 02/18/2025
STAFF: lec
CHANGES: 
wts2-1616/E4G-150/GEO GXD Ht Load: dropping and reloading of raw samples not happening
        modified:   bin/geo_htload.py

TAG: gxdhtload-6-0-25-2
DATE: 02/11/2025
STAFF: lec
CHANGES: 
wts2-1612/e4g-146/sw:GEO_GXD_HT_Load -- add "Other" to list of desired series types and see how well the classifier handles it

TAG: gxdhtload-6-0-25-1
DATE: 01/27/2025
STAFF: lec
CHANGES: 
wts2-1605/e4g-124/Retire AdHoc Server : remove local dependencies
        modified:   bin/makePredicted.py

TAG: gxdhtload-6-0-24-?
DATE: 07/26/2024
STAFF: lec
CHANGES: 
wts2-1509/fl2-928/GXD/HT GEO drop/reload : remove unused MGI_KeyValue records

TAG: gxdhtload-6-0-23-10
DATE: 05/30/2024
STAFF: sc
CHANGES: 
1) fl2-839 'GXD HT GEO load: reinstate 730 day config setting'
   download expts/samples back 2 years, not since the beginning
2) fl2-843 'GEO HT Load - Max Samples bug'
   expts w/o sample files are incorrectly being reported as > max samples
   and a expt note is being created.
   expt notes being created by the load were backed out - see story for info
 
TAG: gxdhtload-6-0-23-9
DATE: 04/22/2024
STAFF: sc
CHANGES: wts2-1461 
add more expt types to AE HT experiment load set
Some of these expts w/new exptTypes have empty data structures in the
'subsections' that the load needs to accomodate

TAG: gxdhtload-6-0-23-8
DATE: 04/22/2024
STAFF: sc
CHANGES: wts2-1459, fl2-838 - 
        ArrayExpress HT Load failure - missing columns in some sample rows

TAG: gxdhtload-6-0-23-7
DATE: 04/17/2024
STAFF: sc