@@ -1,3 +1,11 @@
+TAG: gxdhtload-6-0-25-7
+DATE: 05/14/2025
+STAFF: lec
+CHANGES: 
+wts2-1664/e4g-256 - ae_htload.config.default/BASE_EXPT_URL changed
+        modified:   ae_htload.config.default
+        modified:   bin/mirror_ae.py
+
 TAG: gxdhtload-6-0-25-6
 DATE: 05/02/2025
 STAFF: lec
